# vibe-os

./: .gitignore  CLAUDE.md  RALPH-PLAN.md  README.md  VIBE-OS-CLAUDE-CODE-PROMPT.md  bash.exe.stackdump  index.html  package-lock.json  package.json  ralph-loop.sh  vibe-os.jsx  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
src/: App.tsx  main.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frameworks/: gsd.json  native.json  superpowers.json
src-tauri/skills/: debugging.md  python-basics.md
src-tauri/src/: db.rs  lib.rs
src-tauri/src/backends/: claude.rs  codex.rs  fake.rs  mod.rs
src-tauri/src/commands/: agent_commands.rs  agent_commands_v2.rs  architecture_commands.rs  audit_commands.rs  claude_commands.rs  context_commands.rs  db_commands.rs  decision_commands.rs  events_commands.rs  file_commands.rs  graph_commands.rs  mod.rs  pipeline_commands.rs  project_commands.rs  script_commands.rs  shell_commands.rs  token_commands.rs  workflow_commands.rs  workspace_commands.rs
src-tauri/src/graph/: connection.rs  edges.rs  indexer.rs  mod.rs  nodes.rs  population.rs  queries.rs  schema.rs
src-tauri/src/services/: codex_event_stream.rs  event_stream.rs  mod.rs  sidecar.rs  tool_handler.rs
src-tauri/src/workflow/: context.rs  mod.rs  runner.rs
src-tauri/test-fixtures/workflows/: gated-three-phase.json  single-phase-success.json
src-tauri/tests/: pipeline_persistence_integration.rs  test_helpers.rs  workflow_runner_integration.rs
(+208 files in other folders)
