[package]
name = "vibe-os"
version = "0.1.0"
description = "VIBE OS -- Agentic Python Development Environment"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dirs = "6.0"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
glob = "0.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
